# opengl_boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.position  imgui.ini
shaders/: gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  mesh.frag  mesh.vert  pointcloud.frag  pointcloud.vert  unlit.frag
src/: ability.h  ability_beam.cpp  ability_beam.h  ability_gravity.cpp  ability_gravity.h  ability_move.cpp  ability_move.h  ability_push.cpp  ability_push.h  angle_buffer.h  camera.cpp  camera.h  collision_box.cpp  collision_box.h  lidar.cpp  lidar.h  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  shader.h  trig_fixed.c  trig_fixed.h
src/glad/: gl.h  glad.h
